[package]
name = "yttrium"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi"]

[[bin]]
name = "sign-canary"
path = "src/bin/sign_canary.rs"
required-features = ["sign_canary"]

[features]
default = ["eip155", "erc6492_client", "chain_abstraction_client"]
full = ["all_platforms", "all_clients", "all_namespaces", "native"]

# Features enabling FFI bindings for different platforms
all_platforms = ["android", "ios", "wasm"]
ios = ["uniffi", "uniffi-native-tls"]
android = ["uniffi", "uniffi-rustls", "dep:jni"]
android-full = ["android", "native", "dep:rustls-platform-verifier"]
uniffi = [
    "dep:uniffi",
    "dep:uniffi_macros",
    "dep:tracing-subscriber",
]
# TLS backend options for uniffi builds
uniffi-native-tls = ["uniffi", "reqwest/native-tls"]
uniffi-rustls = ["uniffi", "reqwest/rustls-tls"]
native = [
    "dep:tokio-tungstenite",
    "tokio-tungstenite/connect",
    "tokio-tungstenite/handshake",
    "tokio-tungstenite/native-tls",
]
wasm = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "alloy?/wasm-bindgen",
    "dep:tsify-next",
    "dep:derive_jserror",
    "dep:serde-wasm-bindgen",
    "getrandom/wasm_js",
    "getrandom2/js",
    "uuid/js",
    "dep:wasmtimer",
    "dep:web-sys",
    "web-sys/WebSocket",
    "web-sys/CloseEvent",
    "web-sys/MessageEvent",
]

all_namespaces = ["eip155", "solana", "sui", "stacks", "ton", "tron"]
eip155 = []
solana = [
    "dep:solana-sdk",
    "dep:solana-client",
    "dep:solana-seed-phrase",
    "dep:solana-transaction",
    "dep:solana-signature",
    "dep:solana-signer",
    "dep:solana-keypair",
    "dep:solana-seed-derivable",
    "dep:solana-derivation-path",
    "dep:solana-commitment-config",
    "dep:solana-system-interface",
    "dep:spl-token",
    "dep:spl-associated-token-account",
    "dep:bincode",
    "dep:data-encoding",
    "dep:quinn",
    "dep:const_format",
]
sui = [
    "dep:sui_sdk",
    "dep:sui_keys",
    "dep:sui_shared_crypto",
    "dep:fastcrypto",
    "dep:rand",
    "dep:bcs",
    "dep:tiny-bip39",
]
stacks = ["dep:stacks-rs", "dep:bip32", "dep:stacks_secp256k1", "dep:rand"]
ton = ["dep:ton_lib", "dep:ed25519-dalek", "dep:rand", "dep:data-encoding"]
tron = [
    "dep:stacks_secp256k1",
    "dep:bip32",
    "dep:rand",
    "dep:bs58",
    "stacks_secp256k1/global-context",
    "stacks_secp256k1/rand-std",
    "bip32/bip39",
    "bip32/secp256k1",
]

# Features contributing to bundle size, that you might not need
all_clients = [
    "account_client",
    "erc6492_client",
    "chain_abstraction_client",
    "transaction_sponsorship_client",
    "sign_client",
    "pay",
]
account_client = [
    "dep:alloy",
    "dep:alloy-provider",
    "dep:erc6492",
    "dep:relay_rpc",
    "dep:tower",
]
erc6492_client = [
    "dep:alloy",
    "dep:alloy-provider",
    "dep:erc6492",
    "dep:tower",
]
chain_abstraction_client = [
    "eip155",
    "dep:alloy",
    "dep:alloy-provider",
    "dep:erc6492",
    "dep:relay_rpc",
    "dep:tower",
]
transaction_sponsorship_client = [
    "dep:alloy",
    "dep:alloy-provider",
    "dep:erc6492",
    "dep:relay_rpc",
    "dep:tower",
]
sign_client = [
    "dep:relay_rpc",
    "dep:futures-concurrency",
    "dep:chacha20poly1305",
    "dep:rand",
    "dep:data-encoding",
    "dep:x25519-dalek",
    "dep:hkdf",
    "dep:sha2",
    "dep:tokio-util",
    "dep:jsonwebtoken",
    "tracing/attributes",
    "tokio/macros",
]

sign_canary = [
    "sign_client",
    "native",
    "tokio/rt-multi-thread",
    "dep:aws-config",
    "dep:aws-sdk-cloudwatch",
]
clear_signing = []
evm_signing = ["chain_abstraction_client"]
pay = ["dep:parking_lot", "dep:progenitor-client", "dep:rand", "dep:sha2"]

# Features enabling test coverage
test_full = [
    "test_pimlico_api",
    "test_blockchain_api",
    "test_depends_on_env_REOWN_PROJECT_ID",
]
test_local_bundler = []
test_pimlico_api = []
test_blockchain_api = []
test_depends_on_env_REOWN_PROJECT_ID = []
test_pay_api = ["pay", "reqwest/native-tls"]
test_sign = [
    "sign_client",
    "test_depends_on_env_REOWN_PROJECT_ID",
]

[dependencies]
uniffi = { workspace = true, optional = true, features = ["cli"] }
uniffi_macros = { workspace = true, optional = true }

wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
tsify-next = { workspace = true, optional = true, features = ["js"] }
serde-wasm-bindgen = { workspace = true, optional = true }

# Clear signing engine

# Ethereum (optional - only for account_client, chain_abstraction_client, erc6492_client)
alloy = { workspace = true, optional = true, features = [
    "contract",
    "network",
    "providers",
    "node-bindings",
    "rpc-types-trace",
    "json-rpc",
    "signer-mnemonic",
    "eip712",
    "rlp",
] }
alloy-provider = { workspace = true, optional = true, features = ["erc4337-api"] }
erc6492 = { workspace = true, optional = true }
relay_rpc = { workspace = true, optional = true }
tower = { version = "0.5", optional = true, features = ["util"] }

# foundry-block-explorers = "0.2.3"
getrandom2 = { package = "getrandom", version = "0.2", default-features = false }
getrandom = { version = "0.3.1", default-features = false }

chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
uuid = { version = "1.21.0", default-features = false, features = [
    "v4",
    "serde",
    "rng-getrandom",
] }

wasmtimer = { workspace = true, optional = true }

# Error/Result
eyre.workspace = true
thiserror.workspace = true

# Async
tokio = { workspace = true, default-features = false, features = ["rt", "sync"] }
tokio-util = { workspace = true, optional = true, default-features = false }
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Env vars
dotenvy = { version = "0.15.7", default-features = false }

# Other
hex = { version = "0.4.3", features = ["std"], default-features = false }
tiny-keccak = { version = "2.0", features = ["keccak"] }
async-trait = { version = "0.1.83", default-features = false }
tracing = { version = "0.1.40", default-features = false, features = [
    "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3.22", default-features = false, optional = true, features = [
    "fmt",
    "std",
] }
# fastlz-rs = { version = "0.0.3", features = ["std"], default-features = false }

# Networking
reqwest.workspace = true
url = { workspace = true, features = ["serde"] }

# TLS platform verifier for Android
rustls-platform-verifier = { version = "0.5", optional = true }
jni = { version = "0.21", optional = true }

# Tiny dependency, could copy source. Pinning to exact version to avoid supply-chain attacks.
derive_jserror = { version = "=0.1.0", optional = true, default-features = false }

# Solana
solana-sdk = { workspace = true, optional = true }
solana-client = { workspace = true, optional = true }
solana-seed-phrase = { workspace = true, optional = true }
solana-seed-derivable = { workspace = true, optional = true }
solana-transaction = { workspace = true, optional = true }
solana-signature = { workspace = true, optional = true }
solana-signer = { workspace = true, optional = true }
solana-keypair = { workspace = true, optional = true, features = ["seed-derivable"] }
solana-derivation-path = { workspace = true, optional = true }
solana-commitment-config = { workspace = true, optional = true }
solana-system-interface = { workspace = true, optional = true, features = ["bincode"] }
spl-token = { workspace = true, optional = true }
spl-associated-token-account = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
data-encoding = { workspace = true, optional = true }
quinn = { workspace = true, optional = true, default-features = false }
const_format = { workspace = true, optional = true }

# SUI
sui_sdk = { workspace = true, optional = true }
sui_types = { workspace = true, optional = true }
sui_keys = { workspace = true, optional = true }
sui_shared_crypto = { workspace = true, optional = true }
fastcrypto = { workspace = true, optional = true }
bcs = { workspace = true, optional = true }
tiny-bip39 = { workspace = true, optional = true }

# Stacks
stacks-rs = { workspace = true, optional = true, features = [
    "crypto",
    "wallet-sdk",
    "transaction",
    "clarity",
] }
bip32 = { workspace = true, optional = true }
stacks_secp256k1 = { workspace = true, optional = true, features = [
    "hashes",
    "recovery",
] }
time = { version = "0.3.36", default-features = false, features = ["formatting", "macros", "std"] }
num-bigint = "0.4.6"
rand = { workspace = true, optional = true, features = ["std", "std_rng"] }

# TRON
bs58 = { workspace = true, optional = true }

#TON
ton_lib = { version = "0.0.39", optional = true }
anyhow = "1"
ed25519-dalek = { version = "2", features = ["rand_core"], optional = true }

# Sign Client
futures-concurrency = { version = "7.7.1", optional = true }
tokio-tungstenite = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true, optional = true, features = [
    "alloc",
    "os_rng",
] }
x25519-dalek = { version = "3.0.0-pre.0", features = [
    "static_secrets",
    "os_rng",
], optional = true }
hkdf = { version = "0.13.0-rc.0", optional = true }
sha2 = { version = "0.11.0-rc.0", optional = true }
jsonwebtoken = { version = "9.3.1", optional = true }

aws-config = { version = "1.8.7", features = ["behavior-version-latest"], optional = true }
aws-sdk-cloudwatch = { version = "1.93.0", optional = true }

# Pay
parking_lot = { version = "0.12", optional = true }
progenitor = { workspace = true }
progenitor-client = { workspace = true, optional = true }
urlencoding = "2.1"

[dev-dependencies]
pay-api = { path = "../pay-api" }

# mocking
wiremock = { version = "0.6.0", default-features = false }
test-log = { version = "0.2.17", default-features = false, features = [
    "trace",
] }

# Networking
reqwest.workspace = true
alloy = { workspace = true, features = ["node-bindings", "reqwest"] }
serial_test.workspace = true
chacha20poly1305 = { workspace = true, features = ["alloc", "os_rng"] }
data-encoding = { workspace = true }
ton_lib = "0.0.39"
hex = "0.4.3"

# JWT and crypto testing dependencies
p256 = "0.13"
base64 = "0.22"
rand = "0.8"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz', '--enable-bulk-memory', '--enable-nontrapping-float-to-int', '--enable-sign-ext']
