[package]
name = "yttrium_dart"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "yttrium_dart"
crate-type = ["staticlib", "cdylib"]

[features]
default = ["chain_abstraction_client"]
account_client = ["yttrium/account_client"]
chain_abstraction_client = ["yttrium/chain_abstraction_client"]

[build-dependencies]
flutter_rust_bridge_codegen.workspace = true

[dependencies]
yttrium = { path = "../../yttrium" }
flutter_rust_bridge.workspace = true
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9.103", features = ["vendored"] }
relay_rpc.workspace = true

# Errors
eyre.workspace = true
thiserror.workspace = true

alloy.workspace = true
erc6492.workspace = true

# Async
tokio.workspace = true

# Networking
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"

log.workspace = true

# [[bin]]
# name = "dart_bindgen"
# path = "dart_bindgen.rs"

[package.metadata.cargo-udeps.ignore]
# These crates are needed for Linux builds, but will give unused deps error when built on macOS
# TODO this is moved over from kotlin-ffi; do we need these two crates for yttrium_dart?
normal = ["openssl", "openssl-sys"]
